# NanoHarness

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  FORGE.md  LICENSE  PROJECT_MASTERY_GUIDE.md  README.md  RELEASE_CHECKLIST.md  SECURITY.md  llm_profiles.example.json  mcp_tools.example.json  pyproject.toml  run_demo.py  skill_registry.example.json
.github/workflows/: agent-forge-ci.yml
.run/: NanoHarness Lab 1 - Control Plane.run.xml  NanoHarness Lab 2 - Fixed Repair.run.xml  NanoHarness Lab 3 - Live Agent.run.xml  NanoHarness Lab 4 - Astropy Evidence.run.xml
agent-forge/: .gitignore  PROJECT_MASTERY_GUIDE.md  README.md  README_MACOS_RUN.md  llm_profiles.example.json  pyproject.toml  run_demo.py  summary.md
agent-forge/scripts/: verify.sh  (+3 more)
agent_forge/: README.md  __init__.py  __main__.py  _harness_support.py  cli.py  code_compass.py  configuration.py  contracts.py  control.py  extensions.py  forge_cli.py  harness.py  harness_contracts.py  hooks.py  ui.py
docs/: ARCHITECTURE.md  AgentForge总体架构与运行链路.md  CAPABILITY_REALITY_MATRIX.md  PROJECT_EVOLUTION.md  PROJECT_READINESS.md  ROADMAP.md  architecture.md  multi-agent.md  profile-drafting-brief.md  多Agent协作机制与对比评测说明.md
eval_cases/: webhook_eval_utils.py
examples/: agent.sample.yaml  embed_harness.py  evidence_dataset.sample.jsonl  fanout-plan.sample.json
local_scripts/: README.md  run_deepseek.sh  run_llm_profile.sh  run_mock.sh  run_ollama.sh  run_webhook_bench.sh  run_webhook_deepseek.sh
scripts/: README.md  install_pycharm_debug_lab.py  interview_demo.sh  run_all_modes.sh  setup_macos_local.sh  setup_windows_local.ps1  setup_wsl_local.sh  start_workbench.command  verify.ps1  verify.sh  verify_mcp.ps1  verify_mcp.sh
tests/: __init__.py  test_agent_loop.py  test_agent_loop_policy.py  test_architecture_boundaries.py  test_bench_diagnostics.py  test_bench_report.py  test_benchmark_campaign.py  test_benchmark_case_inspection.py  test_case_study.py  test_code_compass.py  test_code_navigation.py  test_command_policy.py  test_container_execution_environment.py  test_context_assembler.py  test_context_window.py  test_control_plane_showcase.py  test_debug_lab_support.py  test_diagnostics_tool.py  test_documentation_language.py  test_eval_runner.py  test_evaluation_comparison.py  test_evaluation_experiment.py  test_evaluation_scorecard.py  test_execution_environment_cli.py  test_failure_taxonomy.py  test_feedback_dataset.py  test_git_workspace.py  test_hooks_permissions.py  test_human_approval.py  test_human_input.py  test_instruction_resolver.py  test_live_fanout.py  test_llm_client_transport.py  test_llm_config.py  test_long_term_memory.py  test_mcp_builtin_server.py  test_mini_cases.py  test_model_adaptation.py  test_multi_agent_artifacts.py  test_multi_agent_coordinator.py  (+31 more)
(+617 files in other folders)
