[build-system]
requires=["setuptools>=61"]
build-backend="setuptools.build_meta"

[project]
name="agent-forge"
version="0.3.0"
requires-python=">=3.10"

[project.scripts]
forge = "agent_forge.forge_cli:main"
agent-forge = "agent_forge.forge_cli:main"

[project.optional-dependencies]
bench = [
  "datasets>=2.18.0",
]

[tool.setuptools.packages.find]
include = ["agent_forge*"]
exclude = ["tests*", "tutorials*", "examples*", "docs*", "scripts*"]
