[build-system]
requires=["setuptools>=61"]
build-backend="setuptools.build_meta"

[project]
name="agent-forge"
version="0.6.0"
description="A compact AI agent runtime control plane for SWE-bench-shaped coding tasks."
readme="README.md"
requires-python=">=3.10"
license={file="LICENSE"}
classifiers=[
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Testing",
  "Topic :: Software Development :: Quality Assurance",
]

[project.scripts]
forge = "agent_forge.forge_cli:main"
agent-forge = "agent_forge.forge_cli:main"

[project.optional-dependencies]
bench = [
  "datasets>=2.18.0",
]

[tool.setuptools.packages.find]
include = ["agent_forge*"]
exclude = ["tests*", "docs*", "scripts*"]
