[build-system]
requires=["setuptools>=61"]
build-backend="setuptools.build_meta"

[project]
name="agent-forge"
version="0.8.0"
description="A governed software-engineering agent and benchmark evidence workbench."
readme="README.md"
requires-python=">=3.10"
license={file="LICENSE"}
dependencies=[
  "PyYAML>=6.0,<7",
]
classifiers=[
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Testing",
  "Topic :: Software Development :: Quality Assurance",
]

[project.scripts]
forge = "agent_forge.forge_cli:main"

[project.optional-dependencies]
bench = [
  "datasets>=2.18.0",
]
dev = [
  "mypy>=1.10,<2",
  "pytest>=8,<9",
  "types-PyYAML>=6.0,<7",
]

[tool.mypy]
python_version = "3.10"
files = ["agent_forge"]
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
ignore_missing_imports = true
show_error_codes = true
pretty = true

[tool.setuptools.packages.find]
include = ["agent_forge*"]
exclude = ["tests*", "docs*", "scripts*"]
